--- a/pages/canvas/canvas.wxml
+++ b/pages/canvas/canvas.wxml
@@ -1,5 +1,3 @@
-<!--pages/taskCardPost/taskCardPost.wxml-->
-<!-- <text>pages/taskCardPost/taskCardPost.wxml</text> -->
 <view>
   <image src="{{cardImgSrc}}" class='bgImgNew'></image> 
   
@@ -7,7 +5,7 @@
 <view class='invite-modle'>
   <scroll-view scroll-x="true" class="poster-mod" scroll-left="{{scrollLeft}}">
     <block wx:for="{{cardArr}}" wx:key="key" wx:for-index="key" wx:for-item="v">
-      <view class="poster-item {{currentTab==key?'cur':''}}"  >
+      <view class="poster-item {{currentTab == key ? 'cur' : '' }}">
         <image class='img' mode="widthFix" data-current="{{key}}"  src='{{v.img}}' data-id="{{v.id}}" data-src="{{v.img}}" 
         bindtap="swichNav" >
         </image>
@@ -20,10 +18,12 @@
   <view class='imagePathBox' hidden="{{maskHidden == false}}">
     <image class='closeThis' src='../../images/delete.png' bindtap='closeThisPostBtn'></image>
     <image src="{{imagePath}}" class='shengcheng'></image>
-    <button class='baocun' bindtap='baocun'>保存相册，分享到朋友圈</button>
+    <button class='save' bindtap='save'>保存相册</button>
+    <button open-type="share" class='zfbtn'>微信分享</button>
   </view>
   <view hidden="{{maskHidden == false}}" class="mask"></view> 
   <view class="canvas-box">
     <canvas  style="width: 375px;height: 667px;position:fixed;top:9999px" canvas-id="mycanvas"/>
   </view>  
 </view>
+<view class='album' bindtap='getImage'>相册</view>
