feat: 新增仿快手视频播放

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,4 +10,8 @@
   <view class="usermotto">
     <text class="user-motto" bindtap="bindViewTap" wx:if="{{mottoIs}}">{{motto}}</text>
   </view>
+  <view class="usermotto">
+    <text class="demo" bindtap="bindVideoTap">仿快手短视频</text>
+    <text class="txt">练手小demo</text>
+  </view>
 </view>
