--- a/pages/video/index.wxss
+++ b/pages/video/index.wxss
@@ -1,15 +1,6 @@
 page {
 	background-color: #000;
 	overflow: hidden;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
-}
-
-.my-input {
-	position: fixed;
-	bottom: 100px;
-	left: 20px;
-	height: 30px;
-	width: 100px;
-	background-color: red;
 }
