--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,17 +1,20 @@
 <!--index.wxml-->
 <view class="container">
   <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取用户信息 </button>
+    <button wx:if="{{!hasUserInfo}}" bindtap="getUserProfile"> 获取用户信息 </button>
     <block wx:else>
       <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
       <text class="userinfo-nickname">{{userInfo.nickName}}</text>
     </block>
   </view>
   <view class="usermotto">
-    <text class="user-motto" bindtap="bindViewTap" wx:if="{{mottoIs}}">{{motto}}</text>
+    <text class="demo" bindtap="bindEat">今天吃啥呢~</text>
   </view>
   <view class="usermotto">
+    <text class="user-motto" bindtap="bindViewTap" wx:if="{{mottoIs}}">{{motto}}</text>
+  </view>
+  <!-- <view class="usermotto">
     <text class="demo" bindtap="bindVideoTap">仿快手短视频</text>
     <text class="txt">练手小demo</text>
-  </view>
+  </view> -->
 </view>
